force-app/main/default/src/objects/RelayEvents__c/RelayEvents__c.object-meta.xml
<CustomObject>
    <label>Relay Event</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relay Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>