force-app/main/default/src/objects/RelayEvents__c/fields/Account_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Account__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account_18_Digit_Id</label>
    <type>Text</type>
</CustomField>