force-app/main/default/src/objects/RelayEvents__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relay Events</relationshipLabel>
    <relationshipName>Relay_Events</relationshipName>
    <type>Lookup</type>
</CustomField>