force-app/main/default/src/objects/RelayEvents__c/fields/ActionLabel__c.field-meta.xml
<CustomField>
    <fullName>ActionLabel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ActionLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>