force-app/main/default/src/objects/RelayEvents__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ActionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>