force-app/main/default/src/objects/RelayEvents__c/fields/ActionValue__c.field-meta.xml
<CustomField>
    <fullName>ActionValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ActionValue</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>