force-app/main/default/src/objects/RelayEvents__c/fields/ChannelAddr__c.field-meta.xml
<CustomField>
    <fullName>ChannelAddr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>