force-app/main/default/src/objects/RelayEvents__c/fields/ChannelType__c.field-meta.xml
<CustomField>
    <fullName>ChannelType__c</fullName>
    <description>For SMS channels the value will always be &quot;sms&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>