force-app/main/default/src/objects/RelayEvents__c/fields/ClientMessageTag__c.field-meta.xml
<CustomField>
    <fullName>ClientMessageTag__c</fullName>
    <description>An optional, Client, value that was initially provided during a Messaging API call.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Message Tag</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>