force-app/main/default/src/objects/RelayEvents__c/fields/ClientSource__c.field-meta.xml
<CustomField>
    <fullName>ClientSource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>