force-app/main/default/src/objects/RelayEvents__c/fields/ConsentType__c.field-meta.xml
<CustomField>
    <fullName>ConsentType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ConsentType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>