force-app/main/default/src/objects/RelayEvents__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relay Events</relationshipLabel>
    <relationshipName>Relay_Events</relationshipName>
    <type>Lookup</type>
</CustomField>