force-app/main/default/src/objects/RelayEvents__c/fields/CurrentConsent__c.field-meta.xml
<CustomField>
    <fullName>CurrentConsent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Consent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>