force-app/main/default/src/objects/RelayEvents__c/fields/DataCaptureID__c.field-meta.xml
<CustomField>
    <fullName>DataCaptureID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Capture ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>