force-app/main/default/src/objects/RelayEvents__c/fields/DataCaptureLabel__c.field-meta.xml
<CustomField>
    <fullName>DataCaptureLabel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Capture Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>