force-app/main/default/src/objects/RelayEvents__c/fields/DataCaptureValue__c.field-meta.xml
<CustomField>
    <fullName>DataCaptureValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Capture Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>