force-app/main/default/src/objects/RelayEvents__c/fields/EventSubType__c.field-meta.xml
<CustomField>
    <fullName>EventSubType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>