force-app/main/default/src/objects/RelayEvents__c/fields/EventTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EventTimestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Timestamp</label>
    <type>DateTime</type>
</CustomField>