force-app/main/default/src/objects/RelayEvents__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JobId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>