force-app/main/default/src/objects/RelayEvents__c/fields/JourneyID__c.field-meta.xml
<CustomField>
    <fullName>JourneyID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Journey ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>