force-app/main/default/src/objects/RelayEvents__c/fields/MessageID__c.field-meta.xml
<CustomField>
    <fullName>MessageID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>