force-app/main/default/src/objects/RelayEvents__c/fields/MessageName__c.field-meta.xml
<CustomField>
    <fullName>MessageName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MessageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>