force-app/main/default/src/objects/RelayEvents__c/fields/NotificationID__c.field-meta.xml
<CustomField>
    <fullName>NotificationID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notification ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>