force-app/main/default/src/objects/RelayEvents__c/fields/PJN_Case__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The case this event originated from</description>
    <inlineHelpText>The case this event originated from</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Relay Events</relationshipLabel>
    <relationshipName>Relay_Events</relationshipName>
    <type>Lookup</type>
</CustomField>