force-app/main/default/src/objects/RelayEvents__c/fields/PreviousConsent__c.field-meta.xml
<CustomField>
    <fullName>PreviousConsent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Consent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>