force-app/main/default/src/objects/RelayEvents__c/fields/PreviousConsenttType__c.field-meta.xml
<CustomField>
    <fullName>PreviousConsenttType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PreviousConsenttType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>