force-app/main/default/src/objects/RelayEvents__c/fields/ProductGroupID__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>