force-app/main/default/src/objects/RelayEvents__c/fields/RelayTrackingId__c.field-meta.xml
<CustomField>
    <fullName>RelayTrackingId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RelayTrackingId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>