force-app/main/default/src/objects/RelayEvents__c/fields/SourceChannel__c.field-meta.xml
<CustomField>
    <fullName>SourceChannel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>