force-app/main/default/src/objects/RelayEvents__c/fields/TriggerID__c.field-meta.xml
<CustomField>
    <fullName>TriggerID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trigger ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>