force-app/main/default/src/objects/RelayEvents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PJN_Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TriggerNickname__c</columns>
    <columns>EventSubType__c</columns>
    <columns>ClientMessageTag__c</columns>
    <columns>RelayCCID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>